--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-        <title>Routify app</title>
+        <title>Sufflain | Расписание КБТ</title>
 
         <link rel='icon' type='image/png' href='/favicon.png'>
     </head>
 
     <body>
-        <noscript>Please enable Javascript for this site to function.</noscript>
+        <noscript>Для использования Sufflain необходимо активировать JavaScript.</noscript>
         <script type="module" src="/src/main.js"></script>
     </body>
 </html>
